--- a/index.html
+++ b/index.html
@@ -37,28 +37,22 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+                    <div class="logo"><a href="index.html"><img src="images/head-logo-trans.png"></a></div>
                 </div>
                 <div class="col-md-9">
                     <div class="menu_text">
                         <ul>
                         	<li class="active"><a href="index.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT</a></li>
-                            <li><a href="price.html">PROPERTIES</a></li>
-                            <li><a href="gym.html">BLOG</a></li>
-                            <li><a href="gym.html">LOGIN</a></li>
-                            <li><a href="gym.html">REGISTER</a></li>
-                            <li><a href="contact.html">CONTACT US</a></li>
+                            <li>&nbsp;&nbsp;</li>
+                            <li>&nbsp;&nbsp;</li>
+                            <li>&nbsp;&nbsp;</li>
+                            <li>&nbsp;&nbsp;</li>
+                            <li>&nbsp;&nbsp;</li>
+                            <li>&nbsp;&nbsp;</li>
                             <div id="myNav" class="overlay">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
                   <a href="index.html">HOME</a>
-                  <a href="about.html">ABOUT</a>
-                  <a href="price.html">PROPERTIES</a>
-                  <a href="gym.html">BLOG</a>
-                  <a href="gym.html">LOGIN</a>
-                  <a href="gym.html">REGISTER</a>
-                  <a href="class.html">CONTACT US</a>
                 </div>
                 </div>
                 <span  style="font-size:33px;cursor:pointer; color: #ffffff;" onclick="openNav()"><img src="images/toggle-icon.png" class="toggle_menu"></span>
@@ -77,96 +71,23 @@
     			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <div class="row">
     				            <div class="col-sm-7 padding_0">
     				            	<div class="taital_main">
-    				            		<h1 class="banner_taital">THE BEST WAY TO FIND YOUR HOME</h1>
-    				            		<p class="contrary_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over</p>
+    				            		<h1 class="banner_taital">Smart money, zen life.<br>Invierte con visión<br>vive sin estrés.</h1>
+    				            		<p class="contrary_text"></p>
     				            		<div class="btn_main">
                                             <ul>
-                                                <li class="active"><a href="#">ABOUT US</a></li>
-                                                <li><a href="#">VIEW MORE</a></li>
+                                                <li class="active"><a href="#">Sobre nosotros</a></li>
+                                                <li><a href="#">Ver más</a></li>
                                             </ul>
                                         </div>
     				            	</div>
-    				            	<div class="image_1"><img src="images/img-1.png"></div>
     				            </div>
-    				            <div class="col-sm-5">
-    				            	<div class="way_main">
-    				            		<h1 class="way_text">WAY REALESTATE</h1>
-    				            		<div class="way_main_text">
-                                                <ul>
-                                                    <li class="active"><a href="#">01</a></li>
-                                                    <li><a href="#">02</a></li>
-                                                </ul>
-                                            </div>
-    				            	    </div>
-    				                </div>
-    			                </div>
                             </div>
-                        <div class="carousel-item">
-                            <div class="container-fluid"></div>
-                                <div class="row">
-    				                <div class="col-sm-7 padding_0">
-    				                	<div class="taital_main">
-    				                		<h1 class="banner_taital">THE BEST WAY TO FIND YOUR HOME</h1>
-    				                		<p class="contrary_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over</p>
-    				                		<div class="btn_main">
-                                                <ul>
-                                                    <li class="active"><a href="#">ABOUT US</a></li>
-                                                    <li><a href="#">VIEW MORE</a></li>
-                                                </ul>
-                                            </div>
-    				                	</div>
-    				                	<div class="image_1"><img src="images/img-1.png"></div>
-    				                </div>
-    				                <div class="col-sm-5">
-    				                	<div class="way_main">
-    				                		<h1 class="way_text">WAY REALESTATE</h1>
-    				                		<div class="way_main_text">
-                                                <ul>
-                                                    <li class="active"><a href="#">01</a></li>
-                                                    <li><a href="#">02</a></li>
-                                                </ul>
-    				                	    </div>
-    				                    </div>
-    			                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                          	<div class="container-fluid"></div>
-                                <div class="row">
-    				                <div class="col-sm-7 padding_0">
-    				                	<div class="taital_main">
-    				                		<h1 class="banner_taital">THE BEST WAY TO FIND YOUR HOME</h1>
-    				                		<p class="contrary_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over</p>
-    				                		<div class="btn_main">
-                                                <ul>
-                                                    <li class="active"><a href="#">ABOUT US</a></li>
-                                                    <li><a href="#">VIEW MORE</a></li>
-                                                </ul>
-                                            </div>
-    				                	</div>
-    				                	<div class="image_1"><img src="images/img-1.png"></div>
-    				                </div>
-    				                <div class="col-sm-5">
-    				                	<div class="way_main">
-    				                		<h1 class="way_text">WAY REALESTATE</h1>
-    				                		<div class="way_main_text">
-                                                <ul>
-                                                    <li class="active"><a href="#">01</a></li>
-                                                    <li><a href="#">02</a></li>
-                                                </ul>
-    				                	    </div>
-    				                    </div>
-    			                    </div>
-                                </div>
                         </div>
                     </div>
                 </div>
@@ -174,36 +95,17 @@
     	</div>
     </div>
     <!--banner section end -->
-    <!--search section start -->
-    <div class="search_section">
-    	<div class="container">
-    		<h3 class="quick_text">Quick search</h3>
-    		<div class="search_bt_main">
-    			<div class="row">
-    				<div class="col-sm-6 col-lg-3">
-    					<input type="" class="contract_text" placeholder="All contracts" name="All contracts">
-    				</div>
-    				<div class="col-sm-6 col-lg-3">
-    					<input type="" class="contract_text" placeholder="Property Title" name="Property Title">
-    				</div>
-    				<div class="col-sm-6 col-lg-3">
-    					<input type="" class="contract_text" placeholder="Property Type" name="Property Type">
-    				</div>
-    				<div class="col-sm-6 col-lg-3">
-    					<div class="search_bt"><a href="#">Search</a></div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </div>
-    <!-- search section end -->
     <!-- Realestates section start -->
     <div class="realestates_section layout_padding">
     	<div class="container-fluid">
     		<div class="realestates_bg">
-    			<div class="container">
-    			    <h1 class="realestates_taital">New  <span style="color: #040403">Realestates</span></h1>
-    			    <p class="Contrary_taital">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years Contrary to popular belief, Lorem Ipsum is not simply random </p>
+				<div class="container">
+    			    <h1 class="realestates_taital">Sabemos dónde está el potencial de inversión en España<br><span style="color: #040403">y nos encargamos de todo por ti:</span></h1>
+    			    <p class="Contrary_taital">Experiencia en compra de más de 4.000 unidades en toda España<br>Rentabilidad de X% garantizada<br>Cartera propia de viviendas en venta</p>
+    			</div>
+				<div class="container">
+    			    <h1 class="realestates_taital">Conocimiento experto  <span style="color: #040403">y tecnología</span></h1>
+    			    <p class="Contrary_taital">Analizamos datos en profundidad para detectar las mejores zonas antes de que el mercado se dispare, asegurando que tu inversión sea inteligente, rentable y sin estrés.</p>
     			</div>
     			<div class="realestates_section_2">
     				<div class="row">
