--- a/index.html
+++ b/index.html
@@ -95,52 +95,84 @@
     	</div>
     </div>
     <!--banner section end -->
-    <!-- Realestates section start -->
+
+    <!-- Technology section start -->
+    <div class="technology_section">
+    	<div class="container">
+    		<h1 class="realestates_taital">Conocimiento experto <span style="color: #040403">y tecnología</span><br><br></h1>
+            <div class="properties_section_2">
+            	<div class="row">
+					<div class="col-lg-4"><img src="images/lupa.png"><br><br><span  class="technology_text">Detetamos tendencias antes que nadie</span></div>
+					<div class="col-lg-4"><img src="images/inversion.png"><br><br><span  class="technology_text">Inversión basada en datos, no en suposiciones</span></div>
+					<div class="col-lg-4"><img src="images/rentabilidad.png"><br><br><span  class="technology_text">Rentabilidad con visión de futuro</span></div>
+					<p class="ipsum_text" style="font-size: 25px;"><br>Analizamos datos en profundidad para detectar las mejoras zonas antes de que el mercado se dispare, asegurando que tu inversión sea inteligente, rentable y sin estrés</p>
+            	</div>
+            </div>
+    	</div>
+    </div>   
+
+    <div class="properties_section layout_padding">
+    	<div class="container">
+    		<h1 class="realestates_taital">Y nos ocupamos de cada detalle <span style="color: #040403"> por ti:</span></h1>
+    		<p class="ipsum_text">Experiencia en compra de más de 4.000 unidades en toda España<br>Rentabilidad de X% garantizada<br>Cartera propia de viviendas en venta</p>
+            <div class="properties_section_2">
+            	<div class="row">
+					<div class="col-lg-3"><img src="images/lupa2.png"><br><br><span  class="properties_text">Identificamos oportunidades de inverisón</span><span  class="properties_text_2"><br>Seleccionamos inmuebles con potencial y hacemos propuestas</span></div>
+					<div class="col-lg-3"><img src="images/carrito.png"><br><br><span  class="properties_text">Compramos la vivienda por ti</span><span  class="properties_text_2"><br>Nos encargarmos de proceso de compra-venta, asegurando cada detalle y velando por tus intereses</span></div>
+					<div class="col-lg-3"><img src="images/reforma.png"><br><br><span  class="properties_text">Proponemos mejoras y comercializamos</span><span  class="properties_text_2"><br>Comercializamos tu vivenda de forma estratégica, proponiendo mejoras clave y encontrando al inquilíno ideal</span></div>
+					<div class="col-lg-3"><img src="images/rentabilidad2.png"><br><br><span  class="properties_text">Garantizamos tu rentabilidad</span><span  class="properties_text_2"><br>Seleccionamos inmuebles con potencial, alineados con tu tranquilidad y rentabilidad</span></div>
+					<p class="realestates_taital">Ya tienes un piso?</p>
+					<p class="realestates_taital"><span style="font-size: 30px; color: #040403">Entonces tu experiencia con nosotros empieza aquí:</span></p>
+				</div>
+            </div>
+    	</div>
+    </div>   
+    <!-- Technology section end -->   
+
+	<!-- Realestates section start -->
     <div class="realestates_section layout_padding">
     	<div class="container-fluid">
     		<div class="realestates_bg">
-				<div class="container">
-    			    <h1 class="realestates_taital">Sabemos dónde está el potencial de inversión en España<br><span style="color: #040403">y nos encargamos de todo por ti:</span></h1>
-    			    <p class="Contrary_taital">Experiencia en compra de más de 4.000 unidades en toda España<br>Rentabilidad de X% garantizada<br>Cartera propia de viviendas en venta</p>
-    			</div>
-				<div class="container">
-    			    <h1 class="realestates_taital">Conocimiento experto  <span style="color: #040403">y tecnología</span></h1>
-    			    <p class="Contrary_taital">Analizamos datos en profundidad para detectar las mejores zonas antes de que el mercado se dispare, asegurando que tu inversión sea inteligente, rentable y sin estrés.</p>
-    			</div>
     			<div class="realestates_section_2">
     				<div class="row">
     					<div class="col-lg-4">
     						<div class="images_4">
-    							<div class="images_7"><img src="images/img-7.png"></div>
-    							<h2 class="new_text">New</h2>
+    							<div class="images_7"><img src="images/esquina-nuevo.png"></div>
+    							<h2 class="new_text">Nuevo</h2>
     						</div>
-    						<div class="home_taital_main active">
-    							<h1 class="home_text">Home <br>in Merrick Way</h1>
-    							<h1 class="price_text active">$540,000</h1>
+    						<div class="home_taital_main">
+    							<h1 class="home_text">Piso Sant Pere Nord</h1>
+    							<h1 class="price_text">Inversión inicial: 127.000 €</h1>
+								<h1 class="price_text">Rentabilidad neta: 7,8 %</h1>
+								<h1 class="price_text">Alquiler mensual: 822 €</h1>
     						</div>
     					</div>
     					<div class="col-lg-4">
     						<div class="images_5">
-    							<div class="images_7"><img src="images/img-7.png"></div>
-    							<h2 class="new_text">New</h2>
+    							<div class="images_7"><img src="images/esquina-nuevo.png"></div>
+    							<h2 class="new_text">Nuevo</h2>
     						</div>
     						<div class="home_taital_main">
-    							<h1 class="home_text">Street <br>Food Restaurant</h1>
-    							<h1 class="price_text">$1,600 Monthly</h1>
+    							<h1 class="home_text">Piso en Campoamor</h1>
+    							<h1 class="price_text">Inversión inicial: 137.000 €</h1>
+								<h1 class="price_text">Rentabilidad neta: 7,8 %</h1>
+								<h1 class="price_text">Alquiler mensual: 822 €</h1>
     						</div>
     					</div>
     					<div class="col-lg-4">
     						<div class="images_6">
-    							<div class="images_7"><img src="images/img-7.png"></div>
-    							<h2 class="new_text">New</h2>
+    							<div class="images_7"><img src="images/esquina-nuevo.png"></div>
+    							<h2 class="new_text">Nuevo</h2>
     						</div>
     						<div class="home_taital_main">
-    							<h1 class="home_text">Villa <br>in Coral Gables</h1>
-    							<h1 class="price_text">$825,000</h1>
+    							<h1 class="home_text">Apartamento en Alcalá de Henares</h1>
+    							<h1 class="price_text">Inversión inicial: 190.000 €</h1>
+								<h1 class="price_text">Rentabilidad neta: 8,1 %</h1>
+								<h1 class="price_text">Alquiler mensual: 982 €</h1>
     						</div>
     					</div>
     				</div>
-    			</div>
+				</div>
     		</div>
     	</div>
     </div>
