--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- Technology section start -->
     <div class="technology_section">
     	<div class="container">
-    		<h1 class="realestates_taital">Conocimiento experto <span style="color: #040403">y tecnología</span><br><br></h1>
+    		<h1 class="realestates_taital"><br>Conocimiento experto <span style="color: #040403">y tecnología</span><br><br></h1>
             <div class="properties_section_2">
             	<div class="row">
 					<div class="col-lg-4"><img src="images/lupa.png"><br><br><span  class="technology_text">Detetamos tendencias antes que nadie</span></div>
@@ -176,114 +176,107 @@
     		</div>
     	</div>
     </div>
-    <!-- Realestates section end -->
-    <!-- about section start -->
+	<!-- Realestates section end -->
+
+    <!-- Preguntas inversion section start -->
+    <div class="technology_section">
+    	<div class="container">
+    		<h1 class="realestates_taital"><br>¿Alguna pregunta?</h1>
+            <div class="properties_section_2">
+					<p class="preguntas_text"><span style="font-weight: bold;">¿Cuánto dinero necesito para empezar?</span><br>No hace falta ser millonario. Te ayudamos a encontrar la mejor opción según tu presupuesto y objetivos.</p>
+					<p class="preguntas_text"><span style="font-weight: bold;">¿Cuánto cuesta vuestro servicio?</span><br>Te lo explicamos desde el primer momento, sin sorpresas ni costes ocultos.</p>
+					<p class="preguntas_text"><span style="font-weight: bold;">¿Voy a tener que dedicarle mucho tiempo?</span><br>Casi nada. Nos ocupamos de todo para que tú solo tomes las decisiones clave y disfrutes de la inversión.</p>
+					<p class="preguntas_text"><span style="font-weight: bold;">¿Cómo encontráis las propiedades?</span><br>Buscamos en los lugares con más potencial, analizando datos y tendencias para encontrar oportunidades que realmente valgan la pena.</p>
+					<p class="preguntas_text"><span style="font-weight: bold;">¿Podéis gestionar el resto de mis propiedades?</span><br>Ofrecemos un servicio completo de gestión de propiedades, ocupándonos de todo el proceso de principio a fin, para que tú no tengas que preocuparte por nada.</p>
+            </div>
+    	</div>
+    </div>   
+    <!-- Preguntas inversion section start -->
+
+	<!-- Confia inversion section start -->
+	<div class="properties_section layout_padding">
+    	<div class="container">
+    		<h1 class="realestates_taital">Confía tu inversióna <span style="color: #040403"> a quienes realmente saben cómo hacerla crecer.</span></h1>
+            <div class="properties_section_2">
+            	<div class="row">
+					<div class="col-lg-6">
+						<h1 class="confia_portimismo_text"><br>Por ti mismo</h1>
+						<div class="confia_images_1">
+							<p class="confia_portimismo_text_2">
+								<br><br>
+								<br>&raquo;&nbsp;Dificultad para encontrar inquilinos adecuados<br>&raquo;&nbsp;Gestión del proceso de alquiler
+								<br>&raquo;&nbsp;Riesgo de impagos y ocupación ilegal<br>&raquo;&nbsp;Reforma, mantenimiento y reparaciones
+								<br>&raquo;&nbsp;Rentabilidad y fiscalidad<br>&raquo;&nbsp;Ingresos irregulares
+								<br>&raquo;&nbsp;Falta de tiempo, estrés y gestión complicada<br>&raquo;&nbsp;Rentabilidad media en España de un 4.9%
+							</p>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<h1 class="confia_portimismo_text"><br>Con <img src="images/logo-trans.png"></h1>
+						<div class="confia_images_1">
+							<p class="confia_portimismo_text_2">
+								<br><br><br>
+								<br>&raquo;&nbsp;Inquilinos confiables y cualificados<br>&raquo;&nbsp;Olvídate de publicar y enseñar la vivienda
+								<br>&raquo;&nbsp;Ofrecemos seguros de impago y contratos bien estructurados<br>&raquo;&nbsp;Reformar o reparar tu vivienda ya no será un dolor de cabeza
+								<br>&raquo;&nbsp;Estrategia bien planificada para maximizar beneficios<br>&raquo;&nbsp;Te garantizamos el pago de tu renta el día xxx
+								<br>&raquo;&nbsp;Disfruta de los beneficios de la inversión sin preocupaciones<br>&raquo;&nbsp;Rentabilidad garantizada a partir de un xx%
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+    	</div>
+    </div>   
+	<!-- Confia inversion section start -->
+
+	<!-- about section start -->
     <div class="about_section">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-6">
-    				<h1 class="about_text">About <span style="color: #0c0b05;">Us</span></h1>
-    				<p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-    				<div class="read_bt"><a href="#">Read More</a></div>
-    			</div>
+    				<br>
+					<h1 class="about_text">Sobre <span style="color: #0c0b05;">Alquizen</span></h1>
+    				<p class="lorem_text">Invierte en propiedades, invierte en traquilidad</p>
+					<p class="lorem_text">Déjanos tus datos y te contamos más</p>
+					<p class="lorem_text"><img src="images/logo-trans.png"></p>
+				</div>
     			<div class="col-md-6">
-    				<div class="image_8"><img src="images/img-8.png"></div>
-    			</div>
+    				<!--<div class="image_us"><img src="images/alquizen.png"></div>-->
+					<div class="mail_main">
+						<form action="/action_page.php">
+						  <div class="form-group">
+							<input type="text" class="email-bt" placeholder="Name" name="Name">
+						  </div>
+						  <div class="form-group">
+							<input type="text" class="email-bt" placeholder="Email" name="Email">
+						  </div>
+						  <div class="form-group">
+							<input type="text" class="email-bt" placeholder="Subject" name="Subject">
+						  </div>
+										
+						  <div class="form-group">
+							<textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+						  </div>
+						</form>
+						<div class="send_btn">
+						  <div class="main_bt"><a href="#">Send</a></div>
+						</div>
+					</div>
+				</div>
     		</div>
     	</div>
     </div>
     <!-- about section end -->   
-    <!-- Properties section start -->
-    <div class="properties_section layout_padding">
-    	<div class="container">
-    		<h1 class="properties_text">Properties</h1>
-    		<p class="ipsum_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
- piece of classical Latin literature from 45 BC, making it over 2000 years Contrary to popular belief, Lorem Ipsum is not simply random</p>
-            <div class="properties_section_2">
-            	<div class="container">
-            		<div class="images_main">
-            		    <div class="images_left custom_box-style"></div>
-            		    <div class="images_middle custom_box-style"></div>
-            		    <div class="images_right custom_box-style"></div>
-            	    </div>
-            	</div>
-            </div>
-    	</div>
-    </div>   
-    <!-- Properties section end -->   
-    <!-- contact section start --> 
-    <div class="contact_section layout_padding">
-    	<div class="container">
-    		<h1 class="contact_text">Contact <span style="color: #050402;">Us</span></h1>
-    		<div class="contact_section_2">
-    			<div class="row">
-    				<div class="col-md-7">
-    					<div class="mail_main">
-                            <form action="/action_page.php">
-                              <div class="form-group">
-                                <input type="text" class="email-bt" placeholder="Name" name="Name">
-                              </div>
-                              <div class="form-group">
-                                <input type="text" class="email-bt" placeholder="Email" name="Email">
-                              </div>
-                              <div class="form-group">
-                                <input type="text" class="email-bt" placeholder="Subject" name="Subject">
-                              </div>
-                                            
-                              <div class="form-group">
-                                <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                              </div>
-                            </form>
-                            <div class="send_btn">
-                              <div class="main_bt"><a href="#">Send</a></div>
-                            </div>
-                        </div>
-    				</div>
-    				<div class="col-md-5">
-    					<div class="waye_main">
-    						<h1 class="waye_taital">waye</h1>
-    						<p class="waye_text">Realestate</p>
-    					</div>
-    					<h1 class="best_text">Best Find Your  Home</h1>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </div>  
-    <!-- contact section end -->   
+
     <!-- footer section start -->
     <div class="footer_section layout_padding">
     	<div class="container">
     		<div class="row">
     			<div class="col-sm-4">
-    				<h1 class="addres_text">Address</h1>
+    				<h1 class="addres_text">Dirección</h1>
     				<div class="call_text"><img src="images/call-icon.png"><span class="padding_left_0">+1 800 666 6688</span></div>
     				<div class="call_text"><img src="images/mail-icon.png"><span class="padding_left_0">demo@gmail.com</span></div>
-    				<div class="call_text"><img src="images/map-icon.png"><span class="padding_left_0">40 Baria Sreet 133/2 NewYork City, US</span></div>
-    			</div>
-    			<div class="col-sm-4 border_left_0">
-    				<h1 class="addres_text">Our Link</h1>
-    				<div class="footer_menu">
-    					<ul>
-    						<li class="active"><a href="#">Home</a></li>
-    						<li><a href="#">About</a></li>
-    						<li><a href="#">Propertys</a></li>
-    						<li><a href="#">Bolg</a></li>
-    						<li><a href="#">Contact</a></li>
-    					</ul>
-    				</div>
-    			</div>
-    			<div class="col-sm-4 border_left_0">
-    				<h1 class="addres_text">Newsletter</h1>
-    				<input type="text" class="email_text" placeholder="enter your email" name="enter your email">
-    				<div class="subscribe_bt">Subscribe</div>
-    				<div class="social_icon">
-    					<ul>
-    						<li><a href="#"><img src="images/fb-icon.png"></a></li>
-    						<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-    						<li><a href="#"><img src="images/instagram-icon.png"></a></li>
-    					</ul>
-    				</div>
+    				<div class="call_text"><img src="images/map-icon.png"><span class="padding_left_0">Calle del Paraiso, sin fin - Madrid</span></div>
     			</div>
     		</div>
     	</div>
