--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 			<!-- site metas -->
 			<title>Alquizen - Invierte con visión, vive sin estrés</title>
-			<meta name="keywords" content="">
-			<meta name="description" content="">
-			<meta name="author" content="">	
+			<meta name="keywords" content="Alquizen, alquiler inmobiliario, real estate, zen, tranquilidad">
+			<meta name="description" content="Alquizen, alquiler inmobiliario, real estate, zen, tranquilidad">
+			<meta name="author" content="Alquizen">	
 			<!-- bootstrap css -->
 			<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 			<!-- style css -->
@@ -72,9 +72,11 @@
 			<div class="banner_bg">
 				<div class="banner_main">
 					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+						<!--
 						<ol class="carousel-indicators">
 							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 						</ol>
+						-->
 							<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="row">
@@ -82,12 +84,14 @@
 										<div class="taital_main">
 											<h1 class="banner_taital">Smart money, zen life.<br>Invierte con visión<br>vive sin estrés.</h1>
 											<p class="contrary_text"></p>
+											<!--
 											<div class="btn_main">
 												<ul>
 													<li class="active"><a href="#">Sobre nosotros</a></li>
 													<li><a href="#">Ver más</a></li>
 												</ul>
 											</div>
+											-->
 										</div>
 									</div>
 								</div>
@@ -246,7 +250,7 @@
 					<div class="col-md-6">
 						<!--<div class="image_us"><img src="images/alquizen.png"></div>-->
 						<div class="mail_main">
-							<form action="/action_page.php">
+							<form action="env/alzennd.php">
 							<div class="form-group">
 								<input type="text" class="email-bt" placeholder="Name" name="Name">
 							</div>
