--- a/index.html
+++ b/index.html
@@ -250,19 +250,19 @@
 					<div class="col-md-6">
 						<!--<div class="image_us"><img src="images/alquizen.png"></div>-->
 						<div class="mail_main">
-							<form action="env/alzennd.php">
+							<form action="alzennd.php">
 							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Name" name="Name">
+								<input type="text" class="email-bt" placeholder="Nombre" name="Nombre">
 							</div>
 							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Email" name="Email">
+								<input type="text" class="email-bt" placeholder="Correo" name="Correo">
 							</div>
 							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Subject" name="Subject">
+								<input type="text" class="email-bt" placeholder="Asunto" name="Asunto">
 							</div>
 											
 							<div class="form-group">
-								<textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+								<textarea class="massage-bt" placeholder="Mensaje" rows="5" id="comment" name="Mensaje"></textarea>
 							</div>
 							</form>
 							<div class="send_btn">
