--- a/index.html
+++ b/index.html
@@ -252,21 +252,21 @@
 						<div class="mail_main">
 							<form action="alzennd.php">
 							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Nombre" name="Nombre">
+								<input type="text" class="email-bt" placeholder="Nombre" name="nombre">
 							</div>
 							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Correo" name="Correo">
+								<input type="text" class="email-bt" placeholder="Correo" name="correo">
 							</div>
 							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Asunto" name="Asunto">
+								<input type="text" class="email-bt" placeholder="Asunto" name="asunto">
 							</div>
 											
 							<div class="form-group">
-								<textarea class="massage-bt" placeholder="Mensaje" rows="5" id="comment" name="Mensaje"></textarea>
+								<textarea class="massage-bt" placeholder="Mensaje" rows="5" id="comment" name="mensaje"></textarea>
 							</div>
 							</form>
 							<div class="send_btn">
-							<div class="main_bt"><a href="#">Send</a></div>
+								<div class="main_bt"><button id="button" type="submit">Enviar</button></div>
 							</div>
 						</div>
 					</div>
