--- a/index.html
+++ b/index.html
@@ -251,23 +251,23 @@
 						<!--<div class="image_us"><img src="images/alquizen.png"></div>-->
 						<div class="mail_main">
 							<form action="alzennd.php">
-							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Nombre" name="nombre">
-							</div>
-							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Correo" name="correo">
-							</div>
-							<div class="form-group">
-								<input type="text" class="email-bt" placeholder="Asunto" name="asunto">
-							</div>
-											
-							<div class="form-group">
-								<textarea class="massage-bt" placeholder="Mensaje" rows="5" id="comment" name="mensaje"></textarea>
-							</div>
+								<div class="form-group">
+									<input type="text" class="email-bt" placeholder="Nombre" name="nombre" required>
+								</div>
+								<div class="form-group">
+									<input type="text" class="email-bt" placeholder="Correo" name="correo" required>
+								</div>
+								<div class="form-group">
+									<input type="text" class="email-bt" placeholder="Asunto" name="asunto" required>
+								</div>
+												
+								<div class="form-group">
+									<textarea class="massage-bt" placeholder="Mensaje" rows="5" id="comment" name="mensaje" required></textarea>
+								</div>
+								<div class="send_btn">
+									<div class="main_bt"><button id="button" type="submit">Enviar</button></div>
+								</div>
 							</form>
-							<div class="send_btn">
-								<div class="main_bt"><button id="button" type="submit">Enviar</button></div>
-							</div>
 						</div>
 					</div>
 				</div>
