--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 					<div class="col-md-6">
 						<!--<div class="image_us"><img src="images/alquizen.png"></div>-->
 						<div class="mail_main">
-							<form action="www.nearsystem.com/alquizen/alzennd.php" method="post">
+							<form action="https://www.nearsystem.com/alquizen/alzennd.php" method="post">
 								<fieldset>
 									<div class="form-group">
 										<input type="text" class="email-bt" placeholder="Nombre" name="nombre" required>
