--- a/index.html
+++ b/index.html
@@ -185,6 +185,19 @@
 		</div>
 		<!-- Realestates section end -->
 
+		<!-- Assets section start -->
+		<a href="#openModal">Lanzar el modal</a>
+
+		<div id="openModal" class="modalDialog">
+			<div>
+				<a href="#close" title="Close" class="close">X</a>
+				<h2>Mi modal</h2>
+				<p>Este es un ejemplo de modal, creado gracias al poder de CSS3.</p>
+				<p>Puedes hacer un montón de cosas aquí, como alertas o incluso crear un formulario de registro aquí mismo.</p>
+			</div>
+		</div>
+		<!-- Assets section end -->
+
 		<!-- Preguntas inversion section start -->
 		<div class="technology_section">
 			<div class="container">
@@ -250,7 +263,7 @@
 					<div class="col-md-6">
 						<!--<div class="image_us"><img src="images/alquizen.png"></div>-->
 						<div class="mail_main">
-							<form action="https://www.nearsystem.com/alquizen/alzennd.php" method="post">
+							<form action="alzennd.php" method="post">
 								<fieldset>
 									<div class="form-group">
 										<input type="text" class="email-bt" placeholder="Nombre" name="nombre" required>
